# imaginarium

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
anchors_identity/: README.md
anchors_identity/_template/: README.md
docs/: lora.md  model_tuning.md  parameters.md  persona_bible.md
docs/sweeps/: sweep.example.yaml
manifests/: loras_registry.json  models.json
scenes/_template/: scene_card.md
scripts/: bootstrap_macos.sh  build_gui_pose_identity_variants.py  download_models.py  export_workflow_templates.py  install_gui_workflows.py  mask_rect_candidates.py  mask_refine.py  mask_sam.py  mask_text.py  smoke_test.sh  start_comfy.sh  sweep_runs.py
src/persona_stack/: cli.py  comfy_client.py  config.py  grids.py  hashing.py  interrogate.py  media.py  runner.py  validate.py  workflow_patch.py
stylepacks/_template/: style_card.md
workflows/: README.md
workflows/cli/: character.json  character_pose.json  img2img.json  img2img_flux2_klein.json  img2img_headswap_z_image_turbo_v1.json  img2img_headswap_z_image_turbo_v1_mask_input.json  img2img_identity.json  img2img_identity_flux2_klein.json  img2img_realvis.json  img2img_z_image_turbo.json  inpaint.json  inpaint_sdxl_inpaint.json  sam3_mask.json  scene.json  scene_pose.json  style.json  txt2img.json  txt2img_flux2_klein.json  txt2img_z_image_turbo.json
workflows/gui/: character.json  character_pose.json  img2img.json  img2img_flux2_klein.json  img2img_identity.json  img2img_identity_flux2_klein.json  inpaint.json  scene.json  style.json  (+3 more)
(+6 files in other folders)
